# langraph-agentic-systems

./: .gitignore  Dockerfile  README.md  agent.py  compose.yaml  docling-test.py  docling_llamaindex.py  edges_nodes.py  googlecodelabs.py  langgraph_tools.py  pyproject.toml  state_schema.py  streamlit_app.py  utilities.py
agent/: pyproject.toml
agent/research_canvas/: demo.py  oracle.py  state.py
agents/python/: agent.py  chat.py  delete.py  download.py  model.py  search.py  state.py
airflow/: Dockerfile  pyproject.toml
airflow/dags/: pipeline_rag_build.py
airflow/dags/data_load/: docling_parse_pdf.py  parameter_config.py
architecture-diagram/: architecture-diagram.ipynb  langgraph_oracle_architecture
fast_api/: fastapi_setup.py
fast_api/langgraph-api/: agent.py  langgraph_tools.py  state_schema.py  utilities.py
fast_api/langgraph_api/: agent.py  langgraph_tools.py  oracle.py
fast_api/routes/: download_pdf_route.py  langraph_routes.py
fast_api/services/: google_codelabs.py  pdfhandling.py
fastapi/: fastapi_setup.py
fastapi/langgraph-api/: agent.py
features/: chat_with_pdf.py  multi_modal_rag.py
navigation/: back.py
research_canvas/: langgraph_tools.py
ui/src/app/: Main.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/components/: ResearchCanvas.tsx
